--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ ul{
 table{
     width: 100%;
     padding-top: 20px;
+    padding-bottom: 20px;
     border-spacing: 0;
 }
 
@@ -54,4 +55,9 @@ thead{
 
 .color-table{
     background-color: rgb(48, 203, 255);
+}
+
+footer{
+    padding-top: 20px;
+    color: grey;
 }
